Fiddle with css for mobile devices to stop menu overflowing into text

--- a/main.css
+++ b/main.css
@@ -153,7 +153,7 @@ a:active {
  
 /* begin mobile menu stuff */
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 480px) #menu ul{min-width: 480px}}
 
 .menu {
       background: #ffff99; /* same as desktop */
@@ -163,6 +163,11 @@ a:active {
    width: 100%;   /* each item full width */
    border: none;  /* remove blue line border of desktop menu */ 
 }
+  
+/*
+Sample from Stack Overflow
+@media screen and( max-width: 500ppx){#cssnav ul{min-width:500px;}}
+*/
   
 /* End Mobile menu stuff  */
 
